# mms-rs

./: Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
examples/: minimal-bot.rs
src/: c_api.rs  lib.rs
wrappers/c/: bindings.h
wrappers/cxx/: bindings.hpp
wrappers/dotnet/: MmsApi.cs  MmsSharp.csproj
