[package]
name = "mms-rs"
description = "A port of the mms-cpp library for the micromouse simulator mms"
repository = "https://github.com/hardliner66/mms-rs"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

[[example]]
name = "minimal-bot"

[dependencies]
thiserror = "1.0.40"

[features]
default = ["use_results"]
use_results = []
